# PepoHireAssistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: profile.example.yaml  settings.example.yaml
data/: applications.example.json  collection_diagnostics.json  offers.example.json
scripts/: probe_endpoints.py
src/cv_sender/: __init__.py  analytics.py  answers.py  apply_queue.py  bookmarklet_server.py  browser.py  calendar_integration.py  campaigns.py  cleanup.py  cli.py  collector_diagnostics.py  config.py  cv_profiles.py  deep_extraction.py  follow_up.py  form_debug.py  form_filler.py  gmail_integration.py  interviews.py  job_search.py  listing.py  llm.py  models.py  playwright_collection.py  playwright_debugger.py  playwright_helpers.py  rapid_apply_service.py  relevance.py  scorer.py  services.py  storage.py  title_utils.py  ui.py  url_utils.py
src/cv_sender/collectors/: __init__.py  (+12 more)
tests/: conftest.py  test_analytics.py  test_answers.py  test_apply_queue.py  test_batch_import.py  test_bookmarklet_server.py  test_campaigns.py  test_cleanup.py  test_collection_modes.py  test_collector_diagnostics.py  test_config.py  test_cv_profiles.py  test_deep_extraction.py  test_extractors.py  test_follow_up.py  test_form_debug.py  test_form_filler.py  test_gmail.py  test_interviews.py  test_job_search.py  test_listing.py  test_models.py  test_playwright_collectors.py  test_playwright_debugger.py  test_playwright_helpers.py  test_rapid_apply.py  test_relevance.py  test_scorer.py  test_services.py  test_storage.py
(+86 files in other folders)
